--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -7,9 +7,45 @@
     <title>@title</title>
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Raleway|Raleway+Dots" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
-    @content
+  	<section class="header">
+  		<nav class="navbar fixed-top navbar-expand-xl navbar-dark nav-colors">
+        	<a class="navbar-brand" href="#">
+            	<img src="logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            	Sandwi.ch
+        	</a>
+        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            	<span class="navbar-toggler-icon"></span>
+        	</button>
+        	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            	<div class="navbar-nav">
+                	<a class="nav-item nav-link" href="#">Home</a>
+                	<a class="nav-item nav-link" href="#">Builder</a>
+                	<a class="nav-item nav-link" href="#">Chat</a>
+                	<a class="nav-item nav-link" href="#">Profile</a>
+                	<a class="nav-item nav-link" href="#">Log Out</a>
+            	</div>
+        	</div>
+    	</nav>
+    </section>
+    <section class="workspace">
+    	@content
+    </section>
+    <section class="footer">
+    	<footer>
+        	<div>
+            	<span class="navbar-text footer-center">
+                	Sandwi.ch® is a Registered Trademark of Sandwi.ch IP, LLC © 2018-2019 Sandwi.ch IP, LLC. All Rights Reserved.
+            	</span>
+        	</div>
+    	</footer>
+    </section>
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
+  	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
