--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -14,7 +14,7 @@
   	<section class="header">
   		<nav class="navbar fixed-top navbar-expand-xl navbar-dark nav-colors">
         	<a class="navbar-brand" href="#">
-            	<img src="logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        		<img src="@routes.Assets.at("images/logo.png")" width="30" height="30" class="d-inline-block align-top" alt="">
             	Sandwi.ch
         	</a>
         	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
