--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -69,3 +69,34 @@ footer {
     text-align: center;
     color: white;
 }
+
+table {
+    width: 100%;
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+.table-buttons {
+    border: none;
+    padding: 10px;
+}
+
+#table-header {
+    background-color: #3B8742;
+}
+
+.sandwichList {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
+th {
+	color: white;
+}
