--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 
 @main("Play with Scala.js") {
-	<div>
+	<div class="sandwichList">
 		<h1>Welcome to Sandwi.ch!</h1>
 		<ul>
   			<li>Featured Sandwiches: </li>
