--- a/server/app/views/userProfile.scala.html
+++ b/server/app/views/userProfile.scala.html
@@ -1,5 +1,5 @@
 @* userProfile Template File *@
-@(uid:String)
+@(uid:String, sandwiches:Seq[Sandwich])
 
 @main("User Profile") {
 	<div class="sandwichList">
@@ -32,12 +32,12 @@
                 </tr>
             </thead>
             <tbody id="table-data">
-
+			@for(s <- sandwiches) {
   				<tr>
-  					<td class="sandwich">Name</td>
-  					<td class="username">Username</td>
-  					<td class="ingredients">Ingredients</td>
-  					<td class="likes">Likes</td>
+  					<td class="sandwich">@s.name</td>
+  					<td class="username">@s.username</td>
+  					<td class="ingredients">@s.ingredients.mkString(",")</td>
+  					<td class="likes">@s.likes</td>
   					<td class="likeMe">
   						<form action="/delete8" method="POST">
   							<input type="hidden" name="uid" value="name">
@@ -46,7 +46,7 @@
 						</form>
   					</td>
   				</tr>
-
+			}
             </tbody>
     	</table>
 	</div>
