--- a/server/app/views/userProfile.scala.html
+++ b/server/app/views/userProfile.scala.html
@@ -1,5 +1,5 @@
 @* userProfile Template File *@
-@(uid:String, sandwiches:Seq[Sandwich])
+@(sandwiches:Seq[Sandwich])
 
 @main("User Profile") {
 	<div class="sandwichList">
