I'm scared-- someone send me feet pics

--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -2,6 +2,9 @@
 
 
 @main("Play with Scala.js") {
+    <head>
+    link rel="stylesheet" href="public.stylesheets.main.css"
+    </head>
 	<div class="sandwichList">
 		<h1>Welcome to Sandwi.ch!</h1>
 		<ul>
