Trying to get login

--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -26,7 +26,7 @@
                 	<a class="nav-item nav-link" href="#">Builder</a>
                 	<a class="nav-item nav-link" href="#">Chat</a>
                 	<a class="nav-item nav-link" href="#">Profile</a>
-                	<a class="nav-item nav-link" href="#">Log Out</a>
+                	<a class="nav-item nav-link" href="/userLogout">Log Out</a>
             	</div>
         	</div>
     	</nav>
