fixed allsandwiches and stuff

--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(bestSandwiches: Seq[(String, Seq[Int], String)])
+@(bestSandwiches: Seq[(String, Seq[Int], String, Int, Int)])
 
 
 @main("Play with Scala.js") {
