--- a/server/app/views/userHomePage.scala.html
+++ b/server/app/views/userHomePage.scala.html
@@ -17,7 +17,7 @@
   	<section class="header">
   		<nav class="navbar fixed-top navbar-expand-xl navbar-dark nav-colors">
         	<a class="navbar-brand" href="#">
-            	<img src="logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        		<img src="@routes.Assets.at("images/logo.png")" width="30" height="30" class="d-inline-block align-top" alt="">
             	Sandwi.ch
         	</a>
         	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
 	@helper.form(action = controllers.routes.Application.userLogin()) {
 		@helper.CSRF.formField
 		@helper.inputText(userLoginForm("username"))
-		@helper.inputText(userLoginForm("password"))
+		@helper.inputPassword(userLoginForm("password"))
 		<div class="form-actions">
 			<button type="submit">Login</button>
 		</div>
@@ -47,7 +47,7 @@
 	@helper.form(action = controllers.routes.Application.createAUser()) {
 		@helper.CSRF.formField
 		@helper.inputText(createUserForm("username"))
-		@helper.inputText(createUserForm("password"))
+		@helper.inputPassword(createUserForm("password"))
 		<div class="form-actions">
 			<button type="submit">Create User</button>
 		</div>
