--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -22,10 +22,10 @@
         	</button>
         	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             	<div class="navbar-nav">
-                	<a class="nav-item nav-link" href="#">Home</a>
+                	<a class="nav-item nav-link" href="/">Featured</a>
                 	<a class="nav-item nav-link" href="#">Builder</a>
                 	<a class="nav-item nav-link" href="#">Chat</a>
-                	<a class="nav-item nav-link" href="#">Profile</a>
+                	<a class="nav-item nav-link" href="/allSandwiches">Sandwiches</a>
                 	<a class="nav-item nav-link" href="/userLogout">Log Out</a>
             	</div>
         	</div>
