--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -25,7 +25,7 @@
 							}
 							<h5>Created by: @bestSandwiches(0)._3 </h5>
 							<p class="likey">Total likes: @bestSandwiches(0)._4</p>
-						</div>
+						</div><link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
 					</td>
   					<td class="sandwich">				
   						<div class="scrolley">
