--- a/server/app/views/userHomePage.scala.html
+++ b/server/app/views/userHomePage.scala.html
@@ -36,7 +36,7 @@
 		@helper.inputText(userLoginForm("username"))
 		@helper.inputPassword(userLoginForm("password"))
 		<div class="form-actions">
-			<button type="submit">Login</button>
+			<button onclick="storeUser()" type="submit">Login</button>
 		</div>
 	}
 	
@@ -69,6 +69,30 @@
   	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    
+<script>
+
+	if(localStorage.getItem('uname') === null){
+		//get a unique id
+	function create_UUID(){
+    let dt = new Date().getTime();
+    let uuid = 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+        let r = (dt + Math.random()*16)%16 | 0;
+        dt = Math.floor(dt/16);
+        return (c=='x' ? r :(r&0x3|0x8)).toString(16);
+    });
+    return uuid;
+}
+
+	const id = create_UUID();
+	const input = document.getElementById("uname");
+	function storeUser() {
+  		localStorage.setItem('uname', input.value);
+		localStorage.setItem(input.value, id);
+	}
+	}
+
+</script>
   </body>
 </html>
 	
