--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(bestSandwiches: Seq[(String, Seq[Int], String, Int, Int)])
+@(username: String, bestSandwiches: Seq[(String, Seq[Int], String, Int, Int)])
 
 
 @main("Play with Scala.js") {
@@ -67,4 +67,24 @@
 
 			
 	</div>
+	<script type="text/javascript">
+	
+	if(localStorage.getItem('uname') === null){
+		//get a unique id
+		function create_UUID(){
+    	let dt = new Date().getTime();
+    	let uuid = 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+        let r = (dt + Math.random()*16)%16 | 0;
+        dt = Math.floor(dt/16);
+        return (c=='x' ? r :(r&0x3|0x8)).toString(16);
+    	});
+    	return uuid;
+	}
+	
+
+	const id = create_UUID();
+	localStorage.setItem('uname', '@username');
+	localStorage.setItem('@username', id);
+	}
+	</script>
 }
