--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -29,7 +29,7 @@
         	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             	<div class="navbar-nav">
                 	<a class="nav-item nav-link" href="/">Featured</a>
-                	<a class="nav-item nav-link" href="#">Builder</a>
+                	<a class="nav-item nav-link" href="/builder">Builder</a>
                 	<a class="nav-item nav-link" href="/chat">Chat</a>
                 	<a class="nav-item nav-link" href="/allSandwiches">Sandwiches</a>
                 	<a class="nav-item nav-link" href="/userLogout">Log Out</a>
