final final final final

--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(username: String, bestSandwiches: Seq[(String, Seq[Int], String, Int, Int)])
 
 
-@main("Play with Scala.js") {
+@main("Featured Page") {
 	<div class="features">
 		<h1 id="title">Welcome to Sandwi.ch! </h1>
 	
