--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -28,7 +28,7 @@
         	</button>
         	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             	<div class="navbar-nav">
-                	<a class="nav-item nav-link" href="/">Featured</a>
+                	<a class="nav-item nav-link" href="/userWelcome">Featured</a>
                 	<a class="nav-item nav-link" href="/builder">Builder</a>
                 	<a class="nav-item nav-link" href="/chat">Chat</a>
                 	<a class="nav-item nav-link" href="/allSandwiches">Sandwiches</a>
